Removed accidental module in assets folder. Scrollbars are overlayed now. Fixed always on top not working sometimes and changed plugin name to "Davinki Toolbox"

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,6 +12,8 @@ body {
 
     width: 100vw;
     height: 100vh;
+
+    overflow: overlay;
 }
 
 //Scrollbar stuff
